--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <button type="button" class="operator-btn">*</button>
           <button type="button" class="operator-btn">-</button>
           <button type="button" class="operator-btn">+</button>
-          <button type="button" class="equal-btn">=</button>
+          <button type="button" class="operator-btn">=</button>
         </div>
       </div>
     </div>
