--- a/index.html
+++ b/index.html
@@ -9,38 +9,37 @@
     <title>Calculator</title>
   </head>
   <body>
-    <div class="container">
+    <div class="calculator">
       <div class="screen">
         <p>0</p>
       </div>
       <div class="buttons-container">
-        <div class="buttons-wrapper">
-          <div class="digit-row">
-            <button type="button">7</button>
-            <button type="button">8</button>
-            <button type="button">9</button>
-          </div>
-          <div class="digit-row">
-            <button type="button">4</button>
-            <button type="button">5</button>
-            <button type="button">6</button>
-          </div>
-          <div class="digit-row">
-            <button type="button">1</button>
-            <button type="button">2</button>
-            <button type="button">3</button>
-          </div>
-          <div class="digit-row">
-            <!-- <button type="button">+/-</button> -->
-            <button type="button">0</button>
-            <button type="button">.</button>
-        </div>
-        <div class="operators">
-          <button type="button" class="reset-btn">CLEAR</button>
+        <div class="buttons-row">
+          <button type="button" class="reset-btn">C</button>
+          <button type="button" class="posneg-btn">+/-</button>
           <button type="button" class="operator-btn">/</button>
+        </div>
+        <div class="buttons-row">
+          <button type="button" class="digit">7</button>
+          <button type="button" class="digit">8</button>
+          <button type="button" class="digit">9</button>
           <button type="button" class="operator-btn">*</button>
+        </div>
+        <div class="buttons-row">
+          <button type="button" class="digit">4</button>
+          <button type="button" class="digit">5</button>
+          <button type="button" class="digit">6</button>
           <button type="button" class="operator-btn">-</button>
+        </div>
+        <div class="buttons-row">
+          <button type="button" class="digit">1</button>
+          <button type="button" class="digit">2</button>
+          <button type="button" class="digit">3</button>
           <button type="button" class="operator-btn">+</button>
+        </div>
+        <div class="buttons-row">
+          <button type="button" class="digit">0</button>
+          <button type="button" class="digit">.</button>
           <button type="button" class="equal-btn">=</button>
         </div>
       </div>
