Add positive/negative sign for numbers

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="buttons-container">
         <div class="buttons-row">
           <button type="button" class="reset-btn">C</button>
-          <button type="button" class="posneg-btn">+/-</button>
+          <button type="button" class="digit">+/-</button>
           <button type="button" class="operator-btn">/</button>
         </div>
         <div class="buttons-row">
